# development-of-a-software-swp_klassenkassa-system

./: README.md  docker-compose.yml  prompts.md  pyproject.toml  pyprojekt.toml  requirements.txt
src/: README.md
src/myapp/: __main__.py  models.py
src/myapp/adapters/: __init__.py  db_memory.py  db_mongo.py
src/myapp/app/: __init__.py  main.py
src/myapp/backend/: Dockerfile  api.py
src/myapp/controller/: __init__.py  main.py
src/myapp/dummydata/: dummydata.json  dummydata.py
src/myapp/frontend/: Dockerfile  gradio_app.py
src/myapp/gui/: __init__.py  main.py  windows.py
src/myapp/models/: __init__.py  balance.py  transaction.py
test/: test_backend.py  test_frontend.py
tests/: test_frontend.py
tests/contract/: test_contract.py
tests/unit/: test_backend.py  test_models.py
